--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mars3d/heatmap.js": "^2.0.7",
     "core-js": "^3.8.3",
     "d3-tip": "^0.9.1",
+    "heatmap.js": "^2.0.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "^4.3.9",
-    "d3": "^7.8.4"
+    "d3": "^7.8.4",
+    "vite": "^4.3.9"
   }
 }
