--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@mars3d/heatmap.js": "^2.0.7",
     "core-js": "^3.8.3",
     "d3-tip": "^0.9.1",
+    "echarts": "^5.4.2",
     "heatmap.js": "^2.0.5",
+    "jquery": "^3.7.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
-    "vuex": "^4.0.2"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
