--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "d3-tip": "^0.9.1",
     "echarts": "^5.4.2",
+    "element-plus": "^2.3.7",
     "heatmap.js": "^2.0.5",
     "jquery": "^3.7.0",
     "vue": "^3.2.13",
@@ -24,6 +25,8 @@
     "d3": "^7.8.4",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
+    "unplugin-auto-import": "^0.16.4",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9"
   }
 }
